File Name: CHANGES

04/24/2014 FASP 1.5.0:
- Add matching-base AMG methods (UA and SA).
- Fix a bug in dcsr_read.
- Fix an early exit problem in AMG coarsening. 
- Close an old branch (dead) and merge branches.

04/16/2014 FASP 1.4.9:
- Add free function for block_dCSRmat matrices. 
- Add block preconditioners for block_dCSRmat matrices.
- Add clang to default compiler searching list.
- Fix a typo in coarsening_rs.c.
- Add pairwise aggregation for AMG setup phase.

04/02/2014 FASP 1.4.8:
- Add ini/ua.dat and ini/sa.dat parameters.
- Clean up make/cmake files.
- Fix multiple doxygen problems.
- Update FASP website.
- Change names of the aggregation inclusion files.
- Prepare aggregation code for testing Notay's algorithm.
- Fix potential memory leakage in CSR to BSR conversions. 

03/31/2014 FASP 1.4.7:
- Fix a bug which makes regression results depend on the default parameters unwantedly. 
- Fix a coarsest level iterative method tolerance problem for AMG.
- Update regression test results.
- Test GCC4.8 on OS X Mavericks.
- Rewrite fasp_format_dcsr_dbsr routine.
- Change timing output in FAMG.
- Add MUMPS support to FASP.

03/19/2014 FASP 1.4.6:
- Change AMG setup output layout. 
- Clean up a few files for further optimization.
- Check diagonal preference branch for GS.
- Modify default parameters in input files. 
- Update FASP header files.
- Update VS10 solution settings.
- Update FASP webpage.

03/14/2014 FASP 1.4.5:
- Fix a return value inconsistent problem in interface_samg.c
- Fix a macro typo in amg_setup_sa.c 
- Use specified name of parameter instead of value in parameters.c
- Fix a relative directory problem in VS08.
- Fix file property problem for *.sh files.
- Fix number of iterations problem in regression.c.
- Update regression test results. 
- Update TODO list.

02/26/2014 FASP 1.4.4:
- Fix missing print information in Fortran wrapper.
- Fix a typo in test.c and test.f90.
- Add SuperLU to CMake.
- Fix an initial parameter problem for iterative solvers.